--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,8 @@ psycopg2-binary==2.9.10
 PyJWT==2.10.1
 sqlparse==0.5.3
 typing_extensions==4.14.1
+gunicorn==20.1.0
+gunicorn==20.1.0
+gunicorn
+psycopg2-binary
+gevent
